# breakout_game

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auto_backend.rs  breakout_game.rs  consts.rs  main.rs
src/breakout_game/: ball.rs  brick.rs  common.rs  components.rs  game_assets.rs  paddle.rs  resources.rs  score.rs  wall.rs
