[package]
name = "bevy_breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_framepace = "0.11.0"
bevy_prototype_lyon = "0.7.2"
rand = "0.8.5"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "2"
